# omega-JVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/bytecode/: bytecode_impl.h  bytecodes.h  interpreter.h  native.h
include/class/: j_class.h  java_types.h
include/class_loadrer/: class_loader.h
include/classfile/: attribute_parser.h  attributes.h  classfile.h  classfile_parser.h  classfile_stream.h  constant_pool.h
include/parser/: parser.h  s.h
include/runtime/: heap.h  runtime_CP.h  runtime_area.h
include/util/: binary_io.h
include/vm/: frame.h  resolver.h  runtime_CP.h  vm.h
java_files/: Aboba.java  Hello.java  Kek.java
java_files/jar_example/: pom.xml
java_files/jar_example/src/main/java/org/example/: Main.java  X.java  Y.java
java_files/jar_example/src/main/java/org/example/platform/: Console.java  DllImport.java  Str.java
src/: CMakeLists.txt
src/bytecode/: bytecode_impl.cpp  interpreter.cpp  native.cpp
src/class_loader/: class_loader.cpp
src/classfile/: CMakeLists.txt  attribute_parser.cpp  attributes.cpp  classfile.cpp  classfile_parser.cpp  classfile_stream.cpp  constant_pool.cpp
src/parser/: CMakeLists.txt  parse.cpp
src/runtime/: heap.cpp  runtime_area.cpp
src/util/: CMakeLists.txt  binary_io.cpp
src/vm/: resolver.cpp  vm.cpp
tests/: CMakeLists.txt  test_0.cpp  test_hello.cpp  test_jar.cpp  test_pinvoke.cpp  test_vm_init.cpp
